# bankai-cairo

./: Cargo.toml  rust-toolchain.toml
cairo/src/: recursive_update.cairo
cairo/src/bls/: committee_update.cairo  signer.cairo  verify_epoch.cairo
cairo/src/recursion/: stone.cairo
cairo/src/utils/: domain.cairo  ssz.cairo
crates/bankai_hints/: Cargo.toml
crates/bankai_hints/src/: lib.rs
crates/bankai_hints/src/hints/: input.rs  mod.rs  utils.rs
crates/bankai_hints/src/types/: bls.rs  header.rs  mod.rs
