[package]
name = "bankai-hints"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm-base = { git = "https://github.com/bankaixyz/cairo-vm-base", features = ["serde"] }
beacon_types.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
hex.workspace = true
tracing.workspace = true